# convbackend

./: .gitignore  Procfile  README.md  auto_commit.sh  csv_to_json.go  e_conversation  gsheet_to_json.go  latest.dump  manage.py  nano.save  output.json  pyproject.toml  requirements-dev.txt  requirements.txt  scenarios.json
.github/workflows/: deploy.yml  django.yml  fixtures.yml  format.yml  main.yml  make_json.yml  python-test.yml
convbackend/: asgi.py  settings.py  urls.py  wsgi.py
demo/: admin.py  convcontrollers.py  e_conversation  gpt3.py  gpthelpers.py  models.py  openai.py  sessions.py  tts.py  types.py  urls.py  views.py
demo/fixtures/: 3.json  4.json  5.json  Buying Tickets.json  data.json  hospital.json  scenarios.json
demo/migrations/: 0001_initial.py  0002_auto_20210208_0400.py  0002_auto_20210213_1905.py  0002_auto_20210214_0600.py  0002_auto_20210411_0131.py  0003_auto_20210210_0830.py  0003_auto_20210214_0247.py  0003_auto_20210218_1113.py  0003_auto_20210411_0142.py  0004_auto_20210213_0325.py  0004_auto_20210214_0524.py  0004_auto_20210219_0407.py  0004_auto_20210411_0149.py  0005_auto_20210227_1222.py  0005_auto_20210411_0151.py  0005_logitem_log_number.py  0006_auto_20210411_1225.py  0007_auto_20210415_0801.py  0008_auto_20210415_0808.py  0009_auto_20210823_0702.py  0010_remove_scenario_caution.py  0011_conversation_temp_for_conv_controller.py  0012_auto_20210827_0522.py  0013_auto_20210827_1242.py  0014_auto_20210903_0933.py  0015_auto_20210904_1113.py  0016_auto_20210916_0754.py  0017_auto_20210919_0825.py  (+18 more)
polls/: urls.py  views.py
(+1 files in other folders)
