[project]
name = "convbackend"
version = "0.0.0"
description = "Backend for AIbou / AIbou Server"
authors = [
    "Ken Shibata <colourdelete@gmail.com>",
    "Shinnosuke Uesaka"
]
license = ""
readme = "README.md"
python = "^3.9"

homepage = "https://github.com/ShinnosukeUesaka/convbackend"
repository = "https://github.com/ShinnosukeUesaka/convbackend"
documentation = "https://github.com/ShinnosukeUesaka/convbackend"

keywords = []

classifiers = []

[dependencies]
Click = "^7.0"
asgiref = "3.3.1"
dj-database-url = "0.5.0"
django = "3.1.6"
django-heroku = "0.3.1"
djangorestless = "0.0.10"
gunicorn = "20.0.4"
psycopg2 = "2.8.4"
pymysql = "1.0.2"
pytz = "2021.1"
six = "1.15.0"
sqlparse = "0.4.1"
whitenoise = "5.2.0"
requests = "2.22.0"
better_profanity = "0.7.0"
django-ratelimit = "3.0.1"
openai = "0.3.0"

[dev-dependencies]

[scripts]

[build-system]
requires = [
    "setuptools >= 35.0.2",
    "wheel >= 0.29.0"
]
build-backend = "setuptools.build_meta"

[tools.poetry]

[tools.tox]
legacy_tox_ini = """
[tox]
envlist = py38,py39

[testenv]
deps = pytest >= 3.0.0, <4
commands = pytest
"""
